# Akagi-NG

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  README.md  README_ZH.md  akagi-ng.spec  build_release.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  cache-cleanup.yml  release.yml  test.yml
akagi_backend/: .codecov.yml  akagi-ng.spec  pyproject.toml
akagi_backend/akagi_ng/: __init__.py  application.py
akagi_backend/akagi_ng/bridge/: base.py  types.py
akagi_backend/akagi_ng/core/: __init__.py  constants.py  context.py  lib_loader.py  loader.py  logging.py  notification_codes.py  notification_handler.py  paths.py  protocols.py
akagi_backend/akagi_ng/dataserver/: adapter.py  api.py  dataserver.py  sse.py
akagi_backend/akagi_ng/electron_client/: __init__.py  base.py  majsoul.py  tenhou.py
akagi_backend/akagi_ng/mitm_client/: bridge_addon.py  client.py
akagi_backend/akagi_ng/mjai_bot/: __init__.py  bot.py  controller.py  lookahead.py  network.py  status.py  tracker.py  utils.py
akagi_backend/akagi_ng/schema/: __init__.py  constants.py  notifications.py  protocols.py  types.py
akagi_backend/akagi_ng/settings/: settings.py
akagi_backend/scripts/: build_backend.py
akagi_backend/tests/: conftest.py
akagi_backend/tests/integration/: conftest.py  test_amatsuki_integration.py  test_application_integration.py  test_controller_integration.py  test_dataserver_integration.py  test_engine_provider_integration.py  test_lookahead_resilience.py  test_main_entry.py  test_majsoul_electron_client_integration.py  test_majsoul_integration.py  test_network_failure_sim.py  test_nukidora_integration.py  test_riichi_city_integration.py  test_shutdown_api.py  test_tenhou_electron_client_integration.py  test_tenhou_integration.py  verify_liqi.py
akagi_backend/tests/unit/: conftest.py  test_akagi_ot_circuit_breaker.py  test_application.py  test_bots.py  test_bridge_amatsuki.py  test_bridge_majsoul.py  test_bridge_majsoul_hand.py  test_bridge_riichi_city.py  test_bridge_tenhou.py  test_chi_logic.py  test_controller_bot_switch.py  test_controller_lifecycle.py  test_dataserver_adapter.py  test_dataserver_api.py  test_dataserver_lifecycle.py  test_electron_client.py  test_engine_factory.py  test_engine_provider.py  test_frontend_adapter_fallback.py  test_kan.py  test_majsoul_liqi.py  test_majsoul_sync_and_reconnect.py  test_mitm_bridge_addon.py  test_mjai_bot_controller.py  test_mortal_bot_decision.py  test_mortal_bot_edge_cases.py  test_mortal_engine.py  test_nukidora.py  test_replay_batch.py  test_riichi_lookahead.py  test_settings.py  test_sse.py  test_state_tracker.py  test_state_tracker_bot.py  test_status_flags.py  test_utils.py  verify_sync_optimization.py
akagi_frontend/: .prettierignore  .prettierrc  build.ts  eslint.config.js  index.html  mock.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
akagi_frontend/src/: App.css  App.tsx  electron.d.ts  index.css  main.tsx  types.ts  version.ts  vite-env.d.ts
akagi_frontend/src/components/: GameProvider.tsx  LaunchScreen.tsx  SettingsPanel.tsx  SettingsProvider.tsx  StreamPlayer.tsx  StreamRecommendation.tsx  StreamRenderComponent.tsx  ThemeProvider.tsx  types.ts
akagi_frontend/src/config/: actionConfig.ts  constants.ts  statusConfig.ts
akagi_frontend/src/contexts/: GameContext.ts  SettingsContext.ts  ThemeContext.ts
akagi_frontend/src/hooks/: useConnectionConfig.ts  useSSEConnection.ts  useSettings.ts  useStatusNotification.ts  useTheme.ts
akagi_frontend/src/i18n/: i18n.ts
akagi_frontend/src/lib/: api-client.ts  mahjong.ts  notify.ts
akagi_frontend/src/pages/: Dashboard.tsx  HUD.tsx
akagi_ng/: __init__.py  __main__.py
akagi_ng/bridge/: __init__.py  base.py  bridge.py  bridge_base.py  liqi.py
akagi_ng/bridge/amatsuki/: bridge.py  consts.py
akagi_ng/bridge/majsoul/: bridge.py  consts.py  liqi.py  tile_mapping.py
akagi_ng/bridge/riichi_city/: bridge.py  consts.py
akagi_ng/core/: __init__.py  app.py  constants.py  context.py  event_handler.py  frontend_adapter.py  lib_loader.py  libriichi_helper.py  loader.py  logging.py  notification_codes.py  paths.py
akagi_ng/dataserver/: adapter.py  api.py  dataserver.py  logger.py  sse.py
akagi_ng/mitm_client/: addon.py  bridge_addon.py  client.py
akagi_ng/mjai_bot/: __init__.py  bot.py  controller.py  logger.py  model.py  network.py  utils.py
akagi_ng/playwright_client/: __init__.py  base.py  client.py  logger.py  majsoul.py  tenhou.py
akagi_ng/settings/: __init__.py  logger.py  settings.py
assets/: file_version_info.txt  liqi.json  settings.schema.json
config/: settings.example.json
docs/: AGENTS.md  code_analysis.md  edge_cases.md  typeddict_review.md
electron/: backend-manager.ts  constants.ts  game-handler.ts  ipc-handlers.ts  main.ts  package-lock.json  package.json  preload.ts  resource-validator.ts  tsconfig.json  window-manager.ts
electron/scripts/: build_backend.ts
scripts/: build_release.py
tests/: conftest.py  repro_bot_state.py  repro_kan_native.py  test_akagi_ot_circuit_breaker.py  test_bots.py  test_bridge_majsoul.py  test_controller_bot_switch.py  test_frontend_adapter_fallback.py  test_frontend_adapter_filter.py  test_kan.py  test_kan_complex.py  test_kan_recommendation.py  test_mjai_nukidora.py  test_nukidora.py  test_nukidora_4p.py  test_nukidora_quick.py  test_replay_batch.py
tests/e2e/: test_notifications.py
tests/integration/: test_bridge_integration.py  test_controller_integration.py  test_dataserver_integration.py
tests/unit/: test_bots.py  test_bridge_amatsuki.py  test_bridge_majsoul.py  test_bridge_majsoul_hand.py  test_bridge_riichi_city.py  test_bridge_tenhou.py  test_event_handler.py  test_kan.py  test_majsoul_sync_and_reconnect.py  test_mitm_bridge_addon.py  test_mortal_bot_decision.py  test_playwright_client.py  test_settings.py  test_state_tracker_bot.py
(+85 files in other folders)
