[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akagi-ng"
version = "0.1.0"
description = "Akagi-NG is a next-generation rewrite inspired by Akagi and MajsoulHelper, focusing on modern architecture and UI."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
authors = [{ name = "Akagi-NG Contributors" }]
dependencies = [
    # Basic
    "mjai==0.2.1",
    "loguru==0.7.3",
    "requests==2.32.5",
    "jsonschema==4.25.1",
    # Majsoul
    "protobuf==6.33.2",
    # PyTorch
    "torch==2.9.1",
    "numpy==2.4.0",
    # Playwright
    "playwright==1.57.0",
    # DataServer
    "aiohttp",
]

[project.urls]
Homepage = "https://github.com/Xe-Persistent/Akagi-NG"

[project.scripts]
akagi-ng = "akagi_ng.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["akagi_ng*"]
exclude = ["frontend*", "logs*", "playwright_data*", ".venv*"]

[tool.setuptools.package-data]
"akagi_ng" = ["py.typed"]