[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akagi-ng"
version = "0.2.0"
description = "Akagi-NG is a next-generation rewrite inspired by Akagi and MajsoulHelper, focusing on modern architecture and UI."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [{ name = "Akagi-NG Contributors" }]
dependencies = [
    # Basic
    "mjai==0.2.1",
    "loguru==0.7.3",
    "requests==2.32.5",
    "jsonschema==4.25.1",
    # Majsoul
    "protobuf==6.33.2",
    # PyTorch
    "torch==2.9.1",
    "numpy==2.4.0",
    # Playwright
    "playwright==1.57.0",
    # DataServer
    "aiohttp==3.13.3",
    # Tools
    "ruff==0.14.10",
    # MITM
    "mitmproxy==11.0.0",
]

[project.urls]
Homepage = "https://github.com/Xe-Persistent/Akagi-NG"

[project.scripts]
akagi-ng = "akagi_ng.__main__:main"

[tool.ruff]
src = ["akagi_ng"]
line-length = 120
target-version = "py312"
extend-exclude = [
    "akagi_ng/bridge/liqi_pb2.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TID", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["akagi_ng"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"akagi_ng/bridge/liqi_pb2.py" = ["ALL"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["akagi_ng*"]
exclude = ["frontend*", "logs*", "playwright_data*", ".venv*"]

[tool.setuptools.package-data]
"akagi_ng" = ["py.typed"]